* style: increase font size of MyText component to 12px and add margin of 0 5px * style: increase width of Box component to 75vw * style: increase font size of bemVindo class to 12px * style: add scrollbar styling to all elements with overflow * style: add active state to post boxes * fix(post-details.tsx): increase marginBottom of last Box component to 190px * fix(post-details.tsx): change overflow to overflowY in main Box component * fix(post-details.tsx): change padding of link Box component to 5px 0 * fix(utils/monthsOfTheYear.ts): change month numbers to start from 1 instead of 0 * feat(MyText.tsx): add margin of 0 5px to component * feat(MyText.tsx): increase font size of component to 12px * feat(index.tsx): change order of

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -1,6 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;0,700;1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;500&display=swap');
 
+*::-webkit-scrollbar {
+    width: 0.3rem;
+    background-color: none; }
+  
+  *::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    box-shadow: none;
+    background-color: #5484FF; }
+
 html {
     height: -webkit-fill-available;
     height: 100%;
@@ -33,10 +43,8 @@ body {
 }
 
 .bemVindo {
-    color: #F2F1F7;
     font-family: 'Roboto Mono', monospace;
     font-weight: 500;
-    text-align: justify;
 }
 
 .postContent {
@@ -44,6 +52,7 @@ body {
     font-family: 'Roboto Mono', monospace;
     font-weight: 300;
     text-align: justify;
+    font-size: large;
 }
 
 span{
